# ai_backend

./: README.md  pyproject.toml
.github/copilot/: LOGIC_DECISIONS.md
.github/workflows/: python-test.yml
documentation/: ARCHITECTURE.md  langchain_client_usage.md  multimodal_inputs_usage.md  prompt_loader_usage.md
example/: example_model.py  example_model.yaml  example_multimodal_inputs.py  example_prompts.py
src/ai_backend/: __init__.py  langchain_client.py  langchain_model.py  prompt_loader.py  types.py
src/ai_backend/message/: __init__.py  image_loader.py  image_model.py  pdf_loader.py
src/ai_backend/message/tests/: test_message_init.py
src/ai_backend/tests/: test_integration.py  test_langchain_client.py  test_prompt_loader.py
